Fix project page program wrapping bug

--- a/app/states/root/section-state/project-state/_project-state_styles.scss
+++ b/app/states/root/section-state/project-state/_project-state_styles.scss
@@ -317,6 +317,11 @@
 				text-decoration: underline;
 			}
 		}
+
+		p
+		{
+			max-width: 100%;
+		}
 	}
 }
 
